[gd_scene load_steps=3 format=3 uid="uid://xeco0i0pkr1t"]

[ext_resource type="Script" path="res://main.gd" id="1_tps7d"]
[ext_resource type="Script" path="res://scripts/startup.gd" id="2_ouuyj"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tps7d")

[node name="Tabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tabs_visible = false

[node name="Startup" type="PanelContainer" parent="Tabs"]
layout_mode = 2
script = ExtResource("2_ouuyj")

[node name="VBox" type="VBoxContainer" parent="Tabs/Startup"]
layout_mode = 2

[node name="Label" type="Label" parent="Tabs/Startup/VBox"]
layout_mode = 2
text = "Select your website directory"

[node name="Scroll" type="ScrollContainer" parent="Tabs/Startup/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SitesList" type="VBoxContainer" parent="Tabs/Startup/VBox/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="Tabs/Startup/VBox"]
layout_mode = 2
alignment = 1

[node name="NewSiteButton" type="Button" parent="Tabs/Startup/VBox/HBox"]
layout_mode = 2
text = "New website"

[node name="OpenSiteButton" type="Button" parent="Tabs/Startup/VBox/HBox"]
layout_mode = 2
text = "Open website"

[node name="SiteSettings" type="PanelContainer" parent="Tabs"]
visible = false
layout_mode = 2

[node name="SiteOverview" type="PanelContainer" parent="Tabs"]
visible = false
layout_mode = 2

[connection signal="pressed" from="Tabs/Startup/VBox/HBox/NewSiteButton" to="Tabs/Startup" method="_on_new_site_button_pressed"]
[connection signal="pressed" from="Tabs/Startup/VBox/HBox/OpenSiteButton" to="Tabs/Startup" method="_on_open_site_button_pressed"]
